@@ -1,5 +1,5 @@
 PACKAGE_NAME="virtualbox-ose"
-PACKAGE_VERSION="CVERSION"
+PACKAGE_VERSION="#MODULE_VERSION#"
 CLEAN="rm -f *.*o"
 BUILT_MODULE_NAME[0]="vboxdrv"
 BUILT_MODULE_LOCATION[0]="vboxdrv"
@@ -11,4 +11,3 @@ BUILT_MODULE_NAME[2]="vboxnetflt"
 BUILT_MODULE_LOCATION[2]="vboxnetflt"
 DEST_MODULE_LOCATION[2]="/updates"
 AUTOINSTALL="yes"
-
