@@ -1,20 +1,0 @@
-#!/bin/sh
-# Copyright (C) 2008 Mario Limonciello
-
-set -e
-
-#DEBHELPER#
-
-CVERSION=`dpkg-query -W -f='${Version}' virtualbox-ose-dkms | awk -F "-" '{print $1}' | cut -d\: -f2`
-
-case "$1" in
-	remove|upgrade|purge)
-		echo "Removing all DKMS Modules"
-		dkms remove -m virtualbox-ose -v $CVERSION --all -q || true
-		#These are no longer used
-		dkms remove -m vboxdrv -v $CVERSION --all -q || true
-		dkms remove -m vboxnetflt -v $CVERSION --all -q || true
-		dkms remove -m vboxnetadp -v $CVERSION --all -q || true
-		echo "Done."
-	;;
-esac
