@@ -1,5 +1,5 @@
 PACKAGE_NAME="virtualbox-ose-guest"
-PACKAGE_VERSION="CVERSION"
+PACKAGE_VERSION="#MODULE_VERSION#"
 CLEAN="rm -f *.*o"
 BUILT_MODULE_NAME[0]="vboxguest"
 BUILT_MODULE_LOCATION[0]="vboxguest"
