@@ -1,16 +1,0 @@
-#!/bin/sh
-# Copyright (C) 2008 Mario Limonciello
-
-set -e
-
-#DEBHELPER#
-
-CVERSION=`dpkg-query -W -f='${Version}' virtualbox-ose-guest-dkms | awk -F "-" '{print $1}' | cut -d\: -f2`
-
-case "$1" in
-	remove|upgrade|purge)
-		echo "Removing all DKMS Modules"
-		dkms remove -m virtualbox-ose-guest -v $CVERSION --all -q || true
-		echo "Done."
-	;;
-esac
